--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint .",
-    "proxy:start": "cd server && node index.js",
+    "proxy:start": "cd server && npm start",
     "dev:android": "PowerShell -ExecutionPolicy Bypass -File .\\scripts\\run-android-dev.ps1"
   },
   "dependencies": {
