--- a/package.json
+++ b/package.json
@@ -13,25 +13,31 @@
     "dev:android": "PowerShell -ExecutionPolicy Bypass -File .\\scripts\\run-android-dev.ps1"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.10.0",
+    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native-stack": "^7.3.16",
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.12",
     "expo-asset": "~12.0.9",
+    "expo-constants": "~18.0.9",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.12",
     "expo-status-bar": "~3.0.8",
-    "fs-extra": "^11.3.2",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-worklets": "^0.5.1",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@react-native/eslint-config": "^0.73.2",
     "@types/react": "~19.1.10",
     "eslint": "^9.11.1",
+    "fs-extra": "^11.3.2",
+    "react-dom": "^19.1.0",
+    "react-refresh": "^0.14.0",
     "typescript": "~5.9.2"
   }
 }
