feat(core): navigation skeleton + screens + mock services

--- a/app.backup_20251011_172444.json
+++ b/app.backup_20251011_172444.json
@@ -30,7 +30,7 @@
     },
     "plugins": ["expo-router", "expo-asset"],
     "extra": {
-      "OPENAI_BASE_URL": "${EXPO_PUBLIC_OPENAI_BASE_URL}"
+      "OPENAI_API_KEY": "${EXPO_PUBLIC_OPENAI_API_KEY}"
     }
   }
 }
