--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,9 @@
 ﻿{
-  "name": "ashwood-openai-proxy",
+  "name": "ashwood-proxy",
   "version": "1.0.0",
+  "private": true,
+  "description": "Minimal OpenAI proxy for Ashwood & Co (GAME)",
   "type": "module",
-  "main": "server.js",
-  "license": "MIT",
   "scripts": {
     "start": "node server.js"
   },
@@ -11,8 +11,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-rate-limit": "^7.4.0",
-    "morgan": "^1.10.0",
-    "openai": "^4.58.1"
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
