--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,22 @@
-# Node / package managers
+﻿# Node & Expo
 node_modules/
-.npm/
-.yarn/
-.pnp.cjs
-.pnp.loader.mjs
-
-# Expo local state
 .expo/
 .expo-shared/
-
-# Build output / caches
-dist/
-web-build/
 .cache/
-*.log
+dist/
+build/
+android/
+ios/
 
-# Android
-android/.gradle/
-android/.idea/
-android/local.properties
-android/build/
-android/app/build/
-
-# iOS
-ios/build/
-ios/Pods/
-ios/*.xcworkspace/
-*.xcuserdata/
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Env & secrets
 .env
-.env.*
-# Server secrets
 server/.env
+
+# Mac/Win cruft
+.DS_Store
+Thumbs.db
