--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev:android": "PowerShell -ExecutionPolicy Bypass -File .\\scripts\\run-android-dev.ps1"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
     "babel-preset-expo": "~54.0.0",
