--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,51 @@ server/.env
 # Mac/Win cruft
 .DS_Store
 Thumbs.db
+# logs / caches
+.expo/
+.expo-shared/
+**/.cache/
+node_modules/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS cruft
+.DS_Store
+Thumbs.db
+
+# env files
+.env
+server/.env
+# logs / caches
+.expo/
+.expo-shared/
+**/.cache/
+node_modules/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS cruft
+.DS_Store
+Thumbs.db
+
+# env files
+.env
+server/.env
+# local env
+.env.local
+
+# backups / scratch
+*.bak
+*.backup*
+*backup*.js
+*backup*.cjs
+
+# mock servers
+server/mock-*.cjs
+
+# local helper scripts
+Ashwood-StartDay.ps1
