--- a/package.json
+++ b/package.json
@@ -16,13 +16,19 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
+    "axios": "^1.12.2",
     "babel-preset-expo": "~54.0.0",
+    "cors": "^2.8.5",
     "expo": "~54.0.12",
     "expo-asset": "~12.0.9",
+    "expo-av": "~16.0.7",
     "expo-constants": "~18.0.9",
+    "expo-haptics": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.12",
     "expo-status-bar": "~3.0.8",
+    "express": "^5.1.0",
+    "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
@@ -30,6 +36,9 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-worklets": "^0.5.1",
+    "seedrandom": "^3.0.5",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
