--- a/package.json
+++ b/package.json
@@ -1,40 +1,41 @@
 {
-    "name":  "ashwood-mobile",
-    "version":  "0.1.0",
-    "private":  true,
-    "main":  "index.js",
-    "scripts":  {
-                    "start":  "expo start",
-                    "android":  "expo run:android",
-                    "ios":  "expo run:ios",
-                    "web":  "expo start --web",
-                    "lint":  "eslint .",
-                    "proxy:start":  "cd server \u0026\u0026 npm start",
-                    "dev:android":  "PowerShell -ExecutionPolicy Bypass -File .\\scripts\\run-android-dev.ps1"
-                },
-    "dependencies":  {
-                         "@react-navigation/native":  "^6.1.18",
-                         "@react-navigation/native-stack":  "^6.11.0",
-                         "babel-preset-expo":  "~54.0.0",
-                         "cors":  "^2.8.5",
-                         "expo":  "~54.0.12",
-                         "expo-asset":  "~12.0.9",
-                         "expo-status-bar":  "~3.0.8",
-                         "express":  "^5.1.0",
-                         "fs-extra":  "^11.3.2",
-                         "morgan":  "^1.10.1",
-                         "react":  "19.1.0",
-                         "react-native":  "0.81.4",
-                         "react-native-gesture-handler":  "~2.28.0",
-                         "react-native-reanimated":  "~4.1.1",
-                         "react-native-safe-area-context":  "~5.6.0",
-                         "react-native-screens":  "~4.16.0",
-                         "zustand":  "^4.5.7"
-                     },
-    "devDependencies":  {
-                            "@react-native/eslint-config":  "^0.73.2",
-                            "@types/react":  "~19.1.10",
-                            "eslint":  "^9.11.1",
-                            "typescript":  "~5.9.2"
-                        }
+    "name": "ashwood-mobile",
+    "version": "0.1.0",
+    "private": true,
+    "main": "index.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo run:android",
+        "ios": "expo run:ios",
+        "web": "expo start --web",
+        "lint": "eslint .",
+        "proxy:start": "cd server && npm start",
+        "dev:android": "PowerShell -ExecutionPolicy Bypass -File .\\scripts\\run-android-dev.ps1"
+    },
+    "dependencies": {
+        "@react-navigation/native": "^6.1.18",
+        "@react-navigation/native-stack": "^6.11.0",
+        "babel-preset-expo": "~54.0.0",
+        "cors": "^2.8.5",
+        "expo": "~54.0.12",
+        "expo-asset": "~12.0.9",
+        "expo-clipboard": "^8.0.7",
+        "expo-status-bar": "~3.0.8",
+        "express": "^5.1.0",
+        "fs-extra": "^11.3.2",
+        "morgan": "^1.10.1",
+        "react": "19.1.0",
+        "react-native": "0.81.4",
+        "react-native-gesture-handler": "~2.28.0",
+        "react-native-reanimated": "~4.1.1",
+        "react-native-safe-area-context": "~5.6.0",
+        "react-native-screens": "~4.16.0",
+        "zustand": "^4.5.7"
+    },
+    "devDependencies": {
+        "@react-native/eslint-config": "^0.73.2",
+        "@types/react": "~19.1.10",
+        "eslint": "^9.11.1",
+        "typescript": "~5.9.2"
+    }
 }
